Création du projet sous firebase

--- a/app/src/main/res/layout/activity_custom_list_view_notes.xml
+++ b/app/src/main/res/layout/activity_custom_list_view_notes.xml
@@ -25,18 +25,32 @@
 
     <TextView
         android:id="@+id/textID_eleve"
-        android:layout_width="250dp"
+        android:layout_width="63dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
         android:layout_marginBottom="8dp"
         android:gravity="center_vertical|start"
-        android:text="Name"
-        android:textSize="18sp"
+        android:text="ID eleve"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/textMatiere"
         app:layout_constraintStart_toEndOf="@+id/textId"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textMatiere"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+        android:text="Matiere"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/textNote"
+        app:layout_constraintStart_toEndOf="@+id/textID_eleve"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -45,28 +59,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="34dp"
-        android:layout_marginRight="34dp"
         android:layout_marginBottom="8dp"
-        android:text="Price"
+        android:text="Note"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textMatiere"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textMatiere"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="8dp"
-        android:text="Type"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/textNote"
-        app:layout_constraintStart_toEndOf="@+id/textID_eleve"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
