--- a/ESME_eleve/app/src/main/res/layout/activity_main.xml
+++ b/ESME_eleve/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageLogoEsme"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="12dp"
@@ -32,7 +32,7 @@
         android:layout_height="32dp"
         android:layout_marginStart="70dp"
         android:layout_marginTop="36dp"
-        android:text="TextView"
+        android:text="Nom Utilisateur\nAdresse Mail Utilisateur"
         android:textAlignment="viewStart"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -52,7 +52,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
-        android:id="@+id/scrollView"
+        android:id="@+id/scrollViewAccueil"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
@@ -63,24 +63,35 @@
         app:layout_constraintTop_toBottomOf="@+id/btDisconnect">
 
         <LinearLayout
+            android:id="@+id/layoutAccueil"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/imageViewCalendar"
+                android:id="@+id/imageCalendar"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
                 android:src="@android:drawable/ic_menu_my_calendar" />
 
+            <TextView
+                android:id="@+id/textViewDb"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginBottom="5dp"
+                android:text="Elements de la database" />
+
             <ImageView
-                android:id="@+id/imageView3"
+                android:id="@+id/imageViewRandom1"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
                 android:src="@android:drawable/ic_dialog_dialer" />
 
             <ImageView
-                android:id="@+id/imageView4"
+                android:id="@+id/imageViewRandom2"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
                 android:src="@android:drawable/ic_dialog_info" />
