--- a/ESME_eleve/app/src/main/res/layout/activity_main.xml
+++ b/ESME_eleve/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/textViewDate"
-        android:layout_width="150dp"
+        android:layout_width="200dp"
         android:layout_height="20dp"
         android:layout_marginStart="70dp"
         android:layout_marginTop="10dp"
@@ -29,7 +29,7 @@
     <TextView
         android:id="@+id/textViewUser"
         android:layout_width="200dp"
-        android:layout_height="32dp"
+        android:layout_height="38dp"
         android:layout_marginStart="70dp"
         android:layout_marginTop="36dp"
         android:text="Nom Utilisateur\nAdresse Mail Utilisateur"
@@ -73,6 +73,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
                 android:src="@android:drawable/ic_menu_my_calendar" />
+
+            <Button
+                android:id="@+id/btUpdate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Mettre à jour" />
 
             <TextView
                 android:id="@+id/textViewDb"
