--- a/ESME_eleve/app/src/main/res/layout/activity_main.xml
+++ b/ESME_eleve/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:background="#D5D5D5"
+    android:nestedScrollingEnabled="true"
     tools:context=".MainActivity">
 
     <TextView
@@ -13,15 +15,16 @@
         android:layout_marginStart="70dp"
         android:layout_marginTop="10dp"
         android:text="Jour + Heure"
+        android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageLogoEsme"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="10dp"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="6dp"
         android:src="@drawable/esme_logo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -34,6 +37,7 @@
         android:layout_marginTop="36dp"
         android:text="Nom Utilisateur\nAdresse Mail Utilisateur"
         android:textAlignment="viewStart"
+        android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -54,10 +58,10 @@
     <ScrollView
         android:id="@+id/scrollViewAccueil"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:contentDescription="@string/welcome"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:nestedScrollingEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btDisconnect">
@@ -65,7 +69,8 @@
         <LinearLayout
             android:id="@+id/layoutAccueil"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:nestedScrollingEnabled="true"
             android:orientation="vertical">
 
             <ImageView
@@ -74,21 +79,22 @@
                 android:layout_height="300dp"
                 android:src="@android:drawable/ic_menu_my_calendar" />
 
-            <Button
-                android:id="@+id/btUpdate"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Mettre à jour" />
-
             <TextView
                 android:id="@+id/textViewDb"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_height="122dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginRight="5dp"
                 android:layout_marginBottom="5dp"
-                android:text="Elements de la database" />
+                android:text="Elements de la database"
+                android:textColor="#000000" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/RecyclerViewNotes"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp" />
 
             <ImageView
                 android:id="@+id/imageViewRandom1"
@@ -101,6 +107,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
                 android:src="@android:drawable/ic_dialog_info" />
+
         </LinearLayout>
     </ScrollView>
 
