--- a/ESME_eleve/app/src/main/res/layout/activity_main.xml
+++ b/ESME_eleve/app/src/main/res/layout/activity_main.xml
@@ -68,18 +68,14 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <Button
-                android:id="@+id/btcalendar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="ButtonTEST" />
 
-            <ImageView
-                android:id="@+id/imageCalendar"
-                android:layout_width="match_parent"
-                android:layout_height="323dp"
-                android:src="@android:drawable/ic_menu_my_calendar" />
-
+            <ImageButton
+                android:id="@+id/calendar_image_button"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:adjustViewBounds="true"
+                android:scaleType="fitXY"
+                android:src="@drawable/calendrier_fond_bleu" />
 
             <Button
                 android:id="@+id/btUpdate"
