--- a/ESME_eleve/app/src/main/res/layout/activity_login.xml
+++ b/ESME_eleve/app/src/main/res/layout/activity_login.xml
@@ -4,21 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#D5D5D5"
+    android:background="@drawable/background_esme_splash"
     tools:context=".LoginActivity">
 
     <EditText
         android:id="@+id/user_email"
         android:layout_width="250dp"
         android:layout_height="50dp"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="300dp"
+        android:background="#091450"
         android:ems="10"
         android:hint="E-Mail"
         android:inputType="textEmailAddress"
-        android:textColor="#000000"
+        android:textColor="#009BEF"
+        android:textColorHint="#00EAFF"
         app:layout_constraintBottom_toTopOf="@+id/user_password"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -26,11 +28,14 @@
         android:id="@+id/user_password"
         android:layout_width="250dp"
         android:layout_height="50dp"
+        android:layout_marginTop="3dp"
         android:layout_marginBottom="5dp"
+        android:background="#091450"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
-        android:textColor="#000000"
+        android:textColor="#009BEF"
+        android:textColorHint="#00EAFF"
         app:layout_constraintBottom_toTopOf="@+id/button_login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -43,7 +48,8 @@
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="300dp"
-        android:text="CONNECTION"
+        android:backgroundTint="#C1FFFFFF"
+        android:text="CONNEXION"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,16 +58,11 @@
         app:layout_constraintTop_toBottomOf="@+id/user_password" />
 
     <ImageView
-        android:id="@+id/logoEsme"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="105dp"
-        android:adjustViewBounds="false"
-        android:foreground="@drawable/esme_logo"
-        android:scaleType="fitXY"
-        android:scaleX="4"
-        android:scaleY="4"
-        android:src="@drawable/esme_logo"
+        android:id="@+id/imageView2"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="40dp"
+        android:src="@drawable/image_esme"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
