--- a/ESME_eleve/app/src/main/res/layout/activity_cours_calendar.xml
+++ b/ESME_eleve/app/src/main/res/layout/activity_cours_calendar.xml
@@ -46,6 +46,7 @@
             android:orientation="vertical">
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/RecyclerViewCours"
                 android:layout_width="match_parent"
                 android:layout_height="656dp" />
         </LinearLayout>
