--- a/ESME_eleve/app/src/main/res/layout/activity_calendar.xml
+++ b/ESME_eleve/app/src/main/res/layout/activity_calendar.xml
@@ -11,9 +11,23 @@
         android:layout_width="376dp"
         android:layout_height="344dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="35dp"
         android:layout_marginEnd="19dp"
-        android:layout_marginBottom="252dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+
+        android:id="@+id/RVTousCours"
+        android:layout_width="394dp"
+        android:layout_height="303dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/calendarView1" />
 </androidx.constraintlayout.widget.ConstraintLayout>
