--- a/ESME_eleve/app/src/main/res/layout/activity_calendar.xml
+++ b/ESME_eleve/app/src/main/res/layout/activity_calendar.xml
@@ -10,7 +10,7 @@
         android:id="@+id/calendarView1"
         android:layout_width="376dp"
         android:layout_height="344dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="19dp"
         android:layout_marginTop="35dp"
         android:layout_marginEnd="19dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,14 +20,27 @@
     <androidx.recyclerview.widget.RecyclerView
 
         android:id="@+id/RVTousCours"
-        android:layout_width="394dp"
-        android:layout_height="303dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="1dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="376dp"
+        android:layout_height="156dp"
+        android:layout_marginStart="19dp"
+        android:layout_marginTop="22dp"
+        android:layout_marginEnd="19dp"
+        app:layout_constraintBottom_toTopOf="@+id/Bt_Crea_Event"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/calendarView1" />
+
+    <Button
+        android:id="@+id/Bt_Crea_Event"
+        android:layout_width="373dp"
+        android:layout_height="53dp"
+        android:layout_marginStart="19dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="19dp"
+        android:layout_marginBottom="70dp"
+        android:text="NEW EVENT"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/RVTousCours" />
 </androidx.constraintlayout.widget.ConstraintLayout>
