--- a/ESME_eleve/app/src/main/res/layout/activity_login.xml
+++ b/ESME_eleve/app/src/main/res/layout/activity_login.xml
@@ -14,7 +14,8 @@
         android:layout_marginTop="300dp"
         android:background="#091450"
         android:ems="10"
-        android:hint="E-Mail"
+        android:gravity="center|center_horizontal|center_vertical"
+        android:hint="  E-Mail"
         android:inputType="textEmailAddress"
         android:textColor="#009BEF"
         android:textColorHint="#00EAFF"
@@ -32,7 +33,8 @@
         android:layout_marginBottom="5dp"
         android:background="#091450"
         android:ems="10"
-        android:hint="Password"
+        android:gravity="center|center_horizontal|center_vertical"
+        android:hint="  Password"
         android:inputType="textPassword"
         android:textColor="#009BEF"
         android:textColorHint="#00EAFF"
