--- a/ESME_eleve/app/src/main/res/layout/activity_new_event_cours.xml
+++ b/ESME_eleve/app/src/main/res/layout/activity_new_event_cours.xml
@@ -37,9 +37,11 @@
         android:layout_height="52dp"
         android:layout_marginStart="96dp"
         android:layout_marginTop="40dp"
-        android:layout_marginBottom="174dp"
-        android:text="Important"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@color/light_gray"
+        android:gravity="center_horizontal|center_vertical"
+        android:onClick="onCheckboxClicked"
+        android:text="IMPORTANT"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/select_Hour_Fin_Event" />
 
@@ -49,32 +51,45 @@
         android:layout_height="52dp"
         android:layout_marginStart="96dp"
         android:layout_marginTop="40dp"
-        android:text="Select Date"
+        android:background="@color/blue_esme"
         android:onClick="popDatePicker"
+        android:text="Select Date"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Intitule_Event" />
 
     <Button
         android:id="@+id/select_Hour_Debut_Event"
-        android:onClick="popTimePickerDebut"
         android:layout_width="218dp"
         android:layout_height="52dp"
         android:layout_marginStart="96dp"
         android:layout_marginTop="40dp"
+        android:background="@color/blue_esme"
+        android:onClick="popTimePickerDebut"
         android:text="Heure Debut"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Select_Date_Event" />
 
     <Button
         android:id="@+id/select_Hour_Fin_Event"
-        android:onClick="popTimePickerFin"
         android:layout_width="218dp"
         android:layout_height="52dp"
         android:layout_marginStart="96dp"
         android:layout_marginTop="40dp"
+        android:background="@color/blue_esme"
+        android:onClick="popTimePickerFin"
         android:text="Heure Fin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/select_Hour_Debut_Event" />
+
+    <Button
+        android:id="@+id/Button_valid"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="156dp"
+        android:layout_marginBottom="72dp"
+        android:text="Valider"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
