--- a/ESME_eleve/app/src/main/res/values/colors.xml
+++ b/ESME_eleve/app/src/main/res/values/colors.xml
@@ -3,8 +3,10 @@
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
+    <color name="light_gray">#C6CDCF </color>
     <color name="gray">#888</color>
     <color name="blue">#0000FF</color>
+    <color name="blue_esme">#35AFEA</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
