--- a/ESME_eleve/app/src/main/res/layout/activity_devoirs.xml
+++ b/ESME_eleve/app/src/main/res/layout/activity_devoirs.xml
@@ -67,7 +67,7 @@
         android:id="@+id/textViewTitreIntitule"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="90dp"
+        android:layout_marginStart="125dp"
         android:layout_marginTop="6dp"
         android:text="Intitulé"
         app:layout_constraintStart_toStartOf="parent"
@@ -88,12 +88,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewDevoirs"
+        android:id="@+id/RecyclerViewDevoirs"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewTitreMatiere" />
+        app:layout_constraintTop_toBottomOf="@id/textViewTitreMatiere" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
