--- a/ESME_eleve/app/src/main/res/layout/custom_adapter_devoirs.xml
+++ b/ESME_eleve/app/src/main/res/layout/custom_adapter_devoirs.xml
@@ -8,8 +8,8 @@
 
     <TextView
         android:id="@+id/textViewMatiere"
-        android:layout_width="80dp"
-        android:layout_height="20dp"
+        android:layout_width="110dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
         android:text="Matière"
@@ -19,7 +19,7 @@
 
     <TextView
         android:id="@+id/textViewObjet"
-        android:layout_width="200dp"
+        android:layout_width="170dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
