--- a/ESME_eleve/app/src/main/res/layout/activity_new_event_cours.xml
+++ b/ESME_eleve/app/src/main/res/layout/activity_new_event_cours.xml
@@ -85,11 +85,12 @@
         android:id="@+id/Button_valid"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="156dp"
-        android:layout_marginBottom="72dp"
+        android:background="@color/blue_esme"
         android:text="Valider"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/checkBox_Importance" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
