--- a/ESME_eleve/app/src/main/res/layout/activity_cours_calendar.xml
+++ b/ESME_eleve/app/src/main/res/layout/activity_cours_calendar.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background_esme_splash"
     android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
     tools:context=".CoursCalendarActivity">
 
@@ -15,6 +16,7 @@
         android:layout_marginTop="28dp"
         android:text="ok"
         android:textAlignment="center"
+        android:textColor="#ff000000"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -30,26 +32,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ScrollView
-        android:layout_width="409dp"
-        android:layout_height="654dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="76dp"
-        android:layout_marginEnd="1dp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/RecyclerViewCours"
+        android:layout_width="match_parent"
+        android:layout_height="656dp"
+        android:layout_marginTop="9dp"
+        android:background="#bee6f2"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/RecyclerViewCours"
-                android:layout_width="match_parent"
-                android:layout_height="656dp" />
-        </LinearLayout>
-    </ScrollView>
+        app:layout_constraintTop_toBottomOf="@+id/return_cal" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
