--- a/ESME_eleve/app/src/main/res/layout/activity_main.xml
+++ b/ESME_eleve/app/src/main/res/layout/activity_main.xml
@@ -50,7 +50,7 @@
         android:layout_marginTop="28dp"
         android:text="Se déconnecter"
         android:textAlignment="viewEnd"
-        android:textColor="#1A237E"
+        android:textColor="#000000"
         android:textSize="12dp"
         app:iconPadding="0dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -59,11 +59,12 @@
     <ImageButton
         android:id="@+id/calendar_image_button"
         android:layout_width="0dp"
-        android:layout_height="200dp"
+        android:layout_height="0dp"
         android:layout_marginTop="74dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
         android:src="@drawable/calendrier_fond_bleu"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toStartOf="@+id/notes_image_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -71,13 +72,14 @@
 
     <ImageButton
         android:id="@+id/notes_image_button"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginTop="74dp"
         android:adjustViewBounds="true"
         android:backgroundTint="#0B3849"
         android:scaleType="fitXY"
         android:src="?attr/actionModePasteDrawable"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/calendar_image_button"
         app:layout_constraintTop_toTopOf="parent"
@@ -85,26 +87,28 @@
 
     <ImageButton
         android:id="@+id/devoirs_image_button"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:adjustViewBounds="true"
         android:backgroundTint="#0B3849"
         android:foreground="?android:attr/actionModeFindDrawable"
         android:foregroundTint="#FBFBFB"
         android:scaleType="fitXY"
-        app:layout_constraintEnd_toStartOf="@+id/empty_image_button"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintEnd_toStartOf="@+id/moodle_image_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/calendar_image_button"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <ImageButton
-        android:id="@+id/empty_image_button"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:id="@+id/moodle_image_button"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:adjustViewBounds="true"
         android:backgroundTint="#0B3849"
-        android:foreground="@android:drawable/stat_sys_warning"
+        android:foreground="@drawable/moodle"
         android:scaleType="fitXY"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/devoirs_image_button"
         app:layout_constraintTop_toBottomOf="@+id/calendar_image_button"
