--- a/ESME_eleve/app/src/main/res/layout/activity_notes.xml
+++ b/ESME_eleve/app/src/main/res/layout/activity_notes.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background_esme_splash"
     tools:context=".NotesActivity">
 
     <TextView
@@ -47,7 +48,7 @@
         android:layout_marginTop="28dp"
         android:text="Se déconnecter"
         android:textAlignment="viewEnd"
-        android:textColor="#1A237E"
+        android:textColor="#000000"
         android:textSize="12dp"
         app:iconPadding="0dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -60,6 +61,7 @@
         android:layout_marginStart="3dp"
         android:layout_marginTop="6dp"
         android:text="Matière"
+        android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageLogoEsme2" />
 
@@ -70,6 +72,7 @@
         android:layout_marginStart="90dp"
         android:layout_marginTop="6dp"
         android:text="Intitulé"
+        android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageLogoEsme2" />
 
@@ -80,6 +83,7 @@
         android:layout_marginStart="25dp"
         android:layout_marginTop="6dp"
         android:text="Date"
+        android:textColor="#000000"
         app:layout_constraintStart_toEndOf="@+id/textViewTitreIntitule"
         app:layout_constraintTop_toBottomOf="@id/imageLogoEsme2" />
 
@@ -90,6 +94,7 @@
         android:layout_marginStart="60dp"
         android:layout_marginTop="6dp"
         android:text="Note"
+        android:textColor="#000000"
         app:layout_constraintStart_toEndOf="@+id/textViewTitreDate"
         app:layout_constraintTop_toBottomOf="@id/imageLogoEsme2" />
 
@@ -100,6 +105,7 @@
         android:layout_marginStart="25dp"
         android:layout_marginTop="6dp"
         android:text="Coeff"
+        android:textColor="#000000"
         app:layout_constraintStart_toEndOf="@+id/textViewTitreNote"
         app:layout_constraintTop_toBottomOf="@id/imageLogoEsme2" />
 
@@ -121,8 +127,22 @@
         android:id="@+id/recyclerViewNotes2"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="#BEE6F2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewTitreMatiere" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewTitreMatiere">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
+    <Button
+        android:id="@+id/btRetourNotes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="4dp"
+        android:backgroundTint="#C1FFFFFF"
+        android:text="Retour"
+        android:textColor="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
