--- a/ESME_eleve/app/src/main/res/layout/activity_splash.xml
+++ b/ESME_eleve/app/src/main/res/layout/activity_splash.xml
@@ -11,8 +11,6 @@
         android:id="@+id/imageView3ESME"
         android:layout_width="290dp"
         android:layout_height="290dp"
-        android:layout_marginTop="220dp"
-        android:layout_marginBottom="221dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,13 +21,13 @@
         android:id="@+id/textView2ESME"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="180dp"
         android:layout_marginBottom="30dp"
         android:shadowColor="@color/blue"
         android:text="ESME"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
