--- a/ESME_eleve/app/src/main/res/values/themes.xml
+++ b/ESME_eleve/app/src/main/res/values/themes.xml
@@ -22,4 +22,8 @@
     <style name="Theme.ESMEÉlève.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.ESMEÉlève.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="CalendarWeekDatText" parent="TextAppearance.AppCompat.Button">
+        <item name="android:textColor">#000000</item>
+    </style>
 </resources>
